--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
         </div>
         <nav class="second-line">
             <p class="porten-name">PORTEN</p>
-            <ul>
-                <li><a href="#">СПОДОБАЛОСЬ</a></li>
-                <li><a href="#">ОСОБИСТИЙ КАБІНЕТ</a></li>
-                <li><a href="#">НАЛАШТУВАННЯ</a></li>
-                <a href="#"><img src="img/images/cart.svg" alt="Cart"></a>
-                <a href="#"><img src="img/images/search.svg" alt="Search"></a>
+            <ul class="nav-menu">
+                <li class="nav-item"><a class="nav-link" href="#">СПОДОБАЛОСЬ</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">ОСОБИСТИЙ КАБІНЕТ</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">НАЛАШТУВАННЯ</a></li>
+                <a class="nav-item nav-link" href="#"><img src="img/images/cart.svg" alt="Cart"></a>
+                <a class="nav-item nav-link" href="#"><img src="img/images/search.svg" alt="Search"></a>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
     </header>
     <main>
@@ -225,5 +230,6 @@
         <p>© 2022 PORTEN, Інтернет-магазин годинників</p>
         <p><a href="#">Угода користувача</a></p>
     </section>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
